<resources>
    <string name="app_name">LetsChat</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="register_later">There was an error, please register later</string>
    <string name="login_later">There was an error, please login later</string>
    <string name="fields_empty">The fields are empty</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="please_register_msg">Please provide the following details!</string>
    <string name="register_password">Password</string>
    <string name="register_username">User Name</string>
    <string name="register_name">Name</string>
    <string name="action_register">Sign Up</string>
    <string name="prompt_username">Username</string>
</resources>